[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=1.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=1.4",
    "langfuse>=3.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]
[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx"]
